some more changes to be tested

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_NAME_DATALAKE=CHUP_PROSTATE_DATALAKE
 DB_HOST_DATALAKE=172.17.0.1
 DB_PORT_DATALAKE=5432
 PATH_OUTPUT_DATA=/srv/outputs/
-CANCER_TYPE=prostate
+TYPE='prostate'
